21 January 2009

* Make window and session choice modes allow you to choose items in vi keys
  mode (doh!). As a side-effect, this makes enter copy selection (as well
  as C-w/M-w) when using emacs keys in copy mode. Reported by merdely.

20 January 2009

* Darwin support for automatic-rename from joshe; Darwin doesn't seem to have
  a sane method of getting argv[0] and searching for the precise insane way
  is too frustrating, so this just uses the executable name.
* Try to change the window title to match the command running it in. This is
  done by reading argv[0] from the process group leader of the group that owns
  the tty (tcgetpgrp()). This can't be done portably so some OS-dependent code
  is introduced (ugh); OpenBSD, FreeBSD and Linux are supported at the moment.

  A new window flag, automatic-rename, is available: if this is set to off, the
  window name is not changed. Specifying a name with the new-window,
  new-session or rename-window commands will automatically set this flag to off
  for the window in question. To disable it entirely set the option to off
  globally (setw -g automatic-rename off).

19 January 2009

* Fix various stupid issues when the status line is turned off. Grr.
* Use reverse attributes for clock and cursor, otherwise they do not
  appear on black and white terminals.
* An error in a command sequence now stops execution of that sequence.
  Internally, each command code now passes a return code back rather than
  talking to the calling client (if any) directly.
* attach-session now tries to start the server if it isn't already started - if
  no sessions are created in .tmux.conf this will cause an error.
* Clean up starting server by making initial client get a special socketpair.

18 January 2009

* Unbreak UTF-8.
* -a flag to next-window and previous-window to select the next or previous 
  window with activity or bell. Bound to M-n and M-p.
* find-window command to search window names, titles and visible content (but