@@ -84,6 +84,6 @@
 - document suspend-client
 - document command sequences
 - document find-window
-- bring back -l/-p on splitw so i can do "splitw -p 75 elinks"
+- document split-window -p and -l
 - UTF-8 combining characters don't work (probably should be width 1 but are
   listed as 2)
